--- a/charts/ratify/templates/deployment.yaml
+++ b/charts/ratify/templates/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- include "ratify.labels" . | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: {{ default 1 .Values.replicaCount }}
   selector:
     matchLabels:
       {{- include "ratify.selectorLabels" . | nindent 6 }}
@@ -23,6 +23,13 @@ spec:
         prometheus.io/port: {{ .Values.instrumentation.metricsPort | quote }}
         {{- end }}
         checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+        {{- if and .Values.provider.cache.enabled  (eq .Values.provider.cache.type "dapr") }}
+        dapr.io/enabled: "true"
+        dapr.io/app-id: {{ include "ratify.fullname" . }}
+        {{- if eq (lower .Values.logLevel) "debug" }}
+        dapr.io/enable-api-logging: "true"
+        {{- end }}
+        {{- end }}
     spec:
       {{- if or .Values.azureWorkloadIdentity.clientId .Values.serviceAccount.create .Values.serviceAccount.name }}
       serviceAccountName: {{ include "ratify.serviceAccountName" . }}
@@ -55,7 +62,10 @@ spec:
             {{- if (lookup "v1" "Secret" .Release.Namespace "gatekeeper-webhook-server-cert") }}
             - --ca-cert-file=usr/local/tls/client-ca/ca.crt
             {{- end }}
-            - --cache-size={{ .Values.provider.cache.size }}
+            - --cache-enabled={{ .Values.provider.cache.enabled }}
+            - --cache-type={{ default "ristretto" .Values.provider.cache.type }}
+            - --cache-name={{ default "dapr-redis" .Values.provider.cache.name }}
+            - --cache-size={{ .Values.provider.cache.cacheSizeMb }}
             - --cache-ttl={{ .Values.provider.cache.ttl }}
             - --metrics-enabled={{ .Values.instrumentation.metricsEnabled }}
             - --metrics-type={{ .Values.instrumentation.metricsType }}
