--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -34,6 +34,32 @@ rules:
 - apiGroups:
   - config.ratify.deislabs.io
   resources:
+  - keymanagementsystems
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - config.ratify.deislabs.io
+  resources:
+  - keymanagementsystems/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - config.ratify.deislabs.io
+  resources:
+  - keymanagementsystems/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - config.ratify.deislabs.io
+  resources:
   - policies
   verbs:
   - create
