--- a/test/bats/tests/config/config_v1beta1_verifier_notation_akv.yaml
+++ b/test/bats/tests/config/config_v1beta1_verifier_notation_akv.yaml
@@ -8,7 +8,7 @@ spec:
   parameters:
     verificationCertStores:
       certs:
-        - certstore-akv
+        - kms-akv
     trustPolicyDoc:
       version: "1.0"
       trustPolicies:
