--- a/test/bats/tests/config/config_v1beta1_verifier_notation.yaml
+++ b/test/bats/tests/config/config_v1beta1_verifier_notation.yaml
@@ -8,7 +8,7 @@ spec:
   parameters:
     verificationCertStores:
       certs:
-        - keymanagementsystem-inline
+        - certstore-inline
     trustPolicyDoc:
       version: "1.0"
       trustPolicies:
