add signing of binaries with cosign

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -74,3 +74,14 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+signs:
+  - cmd: cosign
+    certificate: "${artifact}.pem"
+    args:
+      - "sign-blob"
+      - "--output-certificate=${certificate}"
+      - "--output-signature=${signature}"
+      - "${artifact}"
+      - "--yes"
+    artifacts: checksum
+    output: true
