--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -1,9 +1,9 @@
 name: publish-ghcr
 
 on:
-  push:
-    tags:
-      - v*
+  # push:
+  #   tags:
+  #     - v*
   workflow_dispatch:
 
 permissions: read-all
