--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,4 +1,5 @@
 # Check the documentation at https://goreleaser.com for more options
+version: 2
 before:
   hooks:
     - go mod tidy
@@ -57,11 +58,7 @@ release:
   prerelease: auto
   draft: true
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-    format_overrides:
+  - format_overrides:
       - goos: windows
         format: zip
 checksum:
