--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -57,15 +57,15 @@ release:
   prerelease: auto
   draft: true
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-    format_overrides:
+  - format_overrides:
       - goos: windows
         format: zip
 checksum:
   name_template: 'checksums.txt'
+sboms:
+  - artifacts: archive
+  - id: source
+    artifacts: source
 snapshot:
   name_template: '{{ incpatch .Version }}-next'
 changelog:
